--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="cv.js"></script>
-        <title>Dylan Anderton | Website Developer</title>
+        <title>Dylan Anderton | Front-End Developer</title>
     </head>
 
     <body>
