--- a/index.html
+++ b/index.html
@@ -62,23 +62,55 @@
             <section class="boxskill">
                 <div class="container">
                     <h1 class="skills animated">
-                    PROJECTS & SKILLS
+                    SKILLS
                     </h1>
-                    <div class="wrapper row">
-                        <div class="col-md-6 col-sm-12">
-                            <div class="skills-list" id="skills-list">
-                                <div class="lang-html animated">HTML&emsp;&ensp;&nbsp;&nbsp;Python</div>
-                                <span class="brmed"></span>
-                                <div class="lang-c animated">C&emsp;&emsp;&ensp;Javascript</div>
-                                <span class="brmed"></span>
-                                <div class="lang-css animated">Firebase&emsp;&emsp;&nbsp;CSS</div>
-                            </div>
+                    <div class="skills-list" id="skills-list">
+                        <span class="lang-html col-lg-4 col-md-6 col-sm-12 animated" id="lang-html">HTML</span>
+                        <span class="lang-css col-lg-4 col-md-6 col-sm-12 animated" id="lang-css">CSS</span>
+                        <span class="lang-js col-lg-4 col-md-6 col-sm-12 animated" id="lang-js">Javascript</span>
+                        <span class="brmed" id="skillbr"></span>
+                        <span class="lang-fire col-lg-4 col-md-6 col-sm-12 animated" id="lang-fire">Firebase</span>
+                        <span class="lang-pyth col-lg-4 col-md-6 col-sm-12 animated" id="lang-pyth">PYTHON</span>
+                        <span class="lang-c col-lg-4 col-md-6 col-sm-12 animated" id="lang-c">C</span>
+                    </div>
+
+                    <div class="skills-list2" id="skills-list2">
+                        <table>
+                            <tr>
+                                <td class="lang-html2 animated">HTML</td>
+                                <td class="lang-css2 animated">CSS</td>
+                            </tr>
+                            <tr>
+                                <td class="lang-js2 animated">Javascript</td>
+                                <td class="lang-fire2 animated">Firebase</td>
+                            </tr>
+                            <tr>
+                                <td class="lang-pyth2 animated">PYTHON</td>
+                                <td class="lang-c2 animated">C</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </section>
+
+            <section id="projects">
+                <div class="container">
+                    <h1 class="projects animated">
+                        PROJECTS
+                    </h1>
+                    <div class="project animated">
+                        <div class="hangman" id="hangman">
+                            <a href="hm/hm.html" target="_blank">
+                                <img src="hm/hangman.JPG" id="hangmanpic">
+                            </a>
+                            <p class="hm-text animated">Hangman</p>
                         </div>
-                        <div class="col-md-6 col-sm-12">
-                            <div class="project animated">
-                                <p class="project-text">My latest project was an automatic pet feeding machine that is controllable thorugh an application via Wi-Fi. My teammates and I worked for almost half a year between our packed schedules and despte us being new to building an application, we did it.</p>
-                                <p class="project-text">It was a software that has a timer setting to adjust feeding schedules. Our project won the first place at the Tamkang University's yearly Computer-Science exhibition.</p>
-                            </div>
+                        <div class="hangman2" id="hangman2">
+                            <a href="hm/hm.html" target="_blank">
+                                <img src="hm/hangmanmobile.JPG" id="hangmanpic2">
+                            </a>
+                            <br>
+                            <p class="hm-text2 animated">Hangman</p>
                         </div>
                     </div>
                 </div>
