--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
                     </div>
                     <hr>
                     <div class="copy">
-                    <p style="color: gray; font-size: 15px;">&copy;<script>document.write(new Date().getFullYear())</script> - Dylan Anderton</p>
+                    <p class="copy-text" style="color: gray; font-size: 15px;">&copy;&nbsp;<script>document.write(new Date().getFullYear())</script> - Dylan Anderton - &nbsp;</p>
+                    <a href="https://github.com/dylananderton/WEB-CV" class="source-code" target="_blank">
+                       See the source code
+                    </a>
                     </div>
                 </div>
             </footer>
