--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <span class="lang-css col-lg-4 col-md-6 col-sm-12 animated" id="lang-css">CSS</span>
                         <span class="lang-js col-lg-4 col-md-6 col-sm-12 animated" id="lang-js">Javascript</span>
                         <span class="brmed" id="skillbr"></span>
-                        <span class="lang-fire col-lg-4 col-md-6 col-sm-12 animated" id="lang-fire">Firebase</span>
-                        <span class="lang-pyth col-lg-4 col-md-6 col-sm-12 animated" id="lang-pyth">PYTHON</span>
-                        <span class="lang-c col-lg-4 col-md-6 col-sm-12 animated" id="lang-c">C</span>
+                        <span class="lang-fire col-lg-4 col-md-6 col-sm-12 animated" id="lang-fire">React</span>
+                        <span class="lang-pyth col-lg-4 col-md-6 col-sm-12 animated" id="lang-pyth">jQuery</span>
+                        <span class="lang-c col-lg-4 col-md-6 col-sm-12 animated" id="lang-c">Bootstrap</span>
                     </div>
 
                     <div class="skills-list2" id="skills-list2">
@@ -82,11 +82,11 @@
                             </tr>
                             <tr>
                                 <td class="lang-js2 animated">Javascript</td>
-                                <td class="lang-fire2 animated">Firebase</td>
+                                <td class="lang-fire2 animated">React</td>
                             </tr>
                             <tr>
-                                <td class="lang-pyth2 animated">PYTHON</td>
-                                <td class="lang-c2 animated">C</td>
+                                <td class="lang-pyth2 animated">jQuery</td>
+                                <td class="lang-c2 animated">Bootstrap</td>
                             </tr>
                         </table>
                     </div>
