--- a/hm/hm.html
+++ b/hm/hm.html
@@ -32,6 +32,9 @@
                 <button id="hint">Hint</button>
                 <button id="reset">Play again</button>
             </div>
+            <p class="source-code">
+                <a href="https://github.com/dylananderton/WEB-CV/tree/main/hm" target="_blank">See the source code</a>
+            </p>
         </div>
 
     </body>
