--- a/index.html
+++ b/index.html
@@ -102,15 +102,72 @@
                         <div class="hangman" id="hangman">
                             <a href="hm/hm.html" target="_blank">
                                 <img src="hm/hangman.JPG" id="hangmanpic">
+                                <div class="hm-overlay">
+                                    <div class="hm-overlay-text">Hangman</div>
+                                </div>
                             </a>
-                            <p class="hm-text animated">Hangman</p>
                         </div>
                         <div class="hangman2" id="hangman2">
                             <a href="hm/hm.html" target="_blank">
                                 <img src="hm/hangmanmobile.JPG" id="hangmanpic2">
+                                <div class="hm2-overlay">
+                                    <div class="hm2-overlay-text">Hangman</div>
+                                </div>
                             </a>
-                            <br>
-                            <p class="hm-text2 animated">Hangman</p>
+                        </div>
+                    </div>
+                    <div class="project animated">
+                        <div class="notes" id="notes">
+                            <a href="https://dylananderton.github.io/Notes/" target="_blank">
+                                <img src="Notes/Notes.JPG" id="notespic">
+                                <div class="notes-overlay">
+                                    <div class="notes-overlay-text">Notes</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="notes2" id="notes2">
+                            <a href="https://dylananderton.github.io/Notes/" target="_blank">
+                                <img src="Notes/NotesMobile.JPG" id="notespic2">
+                                <div class="notes2-overlay">
+                                    <div class="notes2-overlay-text">Notes</div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project animated">
+                        <div class="crypto" id="crypto">
+                            <a href="https://dylananderton.github.io/Crypto-App/" target="_blank">
+                                <img src="Crypto/crypto.JPG" id="cryptopic">
+                                <div class="crypto-overlay">
+                                    <div class="crypto-overlay-text">Crypto</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="crypto2" id="crypto2">
+                            <a href="https://dylananderton.github.io/Crypto-App/" target="_blank">
+                                <img src="Crypto/cryptomobile.JPG" id="cryptopic2">
+                                <div class="crypto2-overlay">
+                                    <div class="crypto2-overlay-text">Crypto</div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project animated">
+                        <div class="passgen" id="passgen">
+                            <a href="https://dylananderton.github.io/Password-Generator/" target="_blank">
+                                <img src="PassGen/passgen.JPG" id="passgenpic">
+                                <div class="passgen-overlay">
+                                    <div class="passgen-overlay-text">Password Generator</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="passgen2" id="passgen2">
+                            <a href="https://dylananderton.github.io/Password-Generator/" target="_blank">
+                                <img src="PassGen/passgenmobile.JPG" id="passgenpic2">
+                                <div class="passgen2-overlay">
+                                    <div class="passgen2-overlay-text">Password Generator</div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
