--- a/index.html
+++ b/index.html
@@ -170,6 +170,24 @@
                             </a>
                         </div>
                     </div>
+                    <div class="project animated">
+                        <div class="weather" id="weather">
+                            <a href="https://dylananderton.github.io/Weather-Finder/" target="_blank">
+                                <img src="Weather/weather.JPG" id="weatherpic">
+                                <div class="weather-overlay">
+                                    <div class="weather-overlay-text">Weather Finder</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="weather2" id="weather2">
+                            <a href="https://dylananderton.github.io/Weather-Finder/" target="_blank">
+                                <img src="Weather/weather-mobile.JPG" id="weatherpic2">
+                                <div class="weather2-overlay">
+                                    <div class="weather2-overlay-text">Weather Finder</div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </section>
 
